# 1001minigames

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  compile_android.hxml  compile_ios.hxml  index.html  package-lock.json  package.json
docs/: ANDROID.md  ARQUITETURA.md  CONCEITO_TIKTOK_GAMES.md  GAMES_TODO.md  GAME_DESIGN_BRAINSTORM.md  ITCH.md  JUICE.md
ios/: CMakeLists.txt  Info.plist.in
scripts/: push-itch.sh  setup-ios.sh
src/: Main.hx
src/core/: DebugMenu.hx  FeedbackManager.hx  GameFlow.hx  IMinigame3D.hx  IMinigameScene.hx  IMinigameSceneWithLose.hx  IMinigameUpdatable.hx  MinigameContext.hx  SwipeDetector.hx
src/scenes/: ScoreScreen.hx  StartScreen.hx
src/scenes/minigames/: Asteroids.hx  Boxing3D.hx  CarRacer.hx  CarRacer3D.hx  ColorMatch.hx  DinoRunner.hx  ExampleMinigame.hx  FlappyBird.hx  FruitNinja.hx  Game2048.hx  GolfPutt.hx  GuitarHero.hx  IceClimber.hx  KnifeHit.hx  MagicalDrop.hx  MemoryCards.hx  MiniRacing3D.hx  PacMan.hx  PenaltyShootout.hx  PenaltyShootout3D.hx  PipeConnect.hx  Pong.hx  RedLightGreenLight.hx  SimonSays.hx  SkipRope.hx  SlidingPuzzle.hx  SnakeGame.hx  SpaceInvaders.hx  Stack.hx  SubwaySurfers3D.hx  TapTheColor.hx  Tetris.hx  TimingBall.hx  WhackAMole.hx
src/shared/: Easing.hx  HighScoreManager.hx
